<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/bottom_sheet">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_line" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sort"
        android:paddingBottom="10dp" />

    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/filter_alphabet_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_alphabet"
            android:buttonTint="@color/theme_purple"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/filter_birthdate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_birthdate"
            android:textSize="15sp"
            android:buttonTint="@color/theme_purple"/>
    </RadioGroup>

</LinearLayout>